--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "microsoft",
+  "homepage": "https://Nikhilkushw.github.io/Microsoft",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -12,6 +15,9 @@
   "dependencies": {
     "@fluentui/react-icons": "^2.0.247",
     "bootstrap": "^5.3.3",
+    "build": "^0.1.4",
+    "deploy": "^1.0.3",
+    "microsoft": "^0.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
@@ -28,6 +34,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
